2009-07-08  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-set-file-uid-gid): Handle the case the
	remote user is root, on the local host.
	(tramp-local-host-p): Either the local user or the remote user
	must be root.  (Bug#3771)

2009-07-08  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-mi.el (gdb): Remove description of
	gdb-use-separate-io-buffer.
	(menu): Don't allow toggling of or enable
	gdb-use-separate-io-buffer from menubar.

2009-07-08  E. Jay Berkenbilt  <ejb@ql.org>  (tiny change)

	* mail/unrmail.el (unrmail): Make sure the message ends with two
	newlines (Bug#3769).

2009-07-08  Glenn Morris  <rgm@gnu.org>

	* calendar/calendar.el (calendar-current-date): Rework previous change.

2009-07-08  Ed Reingold  <reingold@emr.cs.iit.edu>

	* calendar/calendar.el (calendar-current-date):
	Add an optional argument giving an offset from today.

2009-07-08  Glenn Morris  <rgm@gnu.org>

	* tutorial.el (tutorial--describe-nonstandard-key):
	Adjust the message for when a key has been unbound.
	(help-with-tutorial): Hide the arch-tag.

2009-07-08  Kenichi Handa  <handa@m17n.org>

	* international/fontset.el (setup-default-fontset): For each
	script, append (not set) font-specs.

	* language/japanese.el (japanese-shift-jis-2004): Fix typo in the
	docstring.

2009-07-08  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-mi.el (gdb-init-1): Move sending
	-data-list-register-names to ...
	(gdb-starting): ... here because GDB 7.0 requires execution to
	have started when using this MI command.
	(gdb-set-header): New function to distinguish select and
	unselected tabs in gdb buffers.
	(gdb-propertize-header): New macro that uses gdb-set-header.
	(gdb-breakpoints-header, gdb-locals-header): Use it.
	(gdb-disassembly-mode-map): Add keybinding to kill buffer.

2009-07-07  Chong Yidong  <cyd@stupidchicken.com>

	* Makefile.in (ELCFILES): Remove fadr.elc.

2009-07-07  Dmitry Dzhus  <dima@sphinx.net.ru>
